--- a/config/mapping.json
+++ b/config/mapping.json
@@ -1,31 +1,32 @@
 {
-"A-AMY" :	188,
-"ALT"   :	358,
-"AST"   :  359,
-"ALP"   :	365,
-"TP"	   : 141,
-"TC"    :	146,
-"UREA"  : 22,
-"GLU-O" :	204,
-"TBIL-DSA" :  138,
-"DBIL-DSA"	:  361,
-"UA" :	198,
-"TG" :	145,
-"ALB" :	363,
-"CREA-J" : 239,
-"LDH" : 236,
-"P" : 242,
-"CK" : 244,
-"A-HBDH" : 287,
-"R-GT"   : 136,
-"CA" : 241,
-"MG" : 243,
-"TBIL-VOX" : 292,
-"DBIL-VOX" : 293,
-"GLU-HK" : 195,
-"HDL-C"  : 237,
-"LDL-C"  : 238,
-"CREA-S" : 143,
-"CRP"   :120
+    "ALT"   :	133,
+    "AST"   :  134,
+    "R-GT"   : 136,
+    "DBIL-DSA"	:  137,
+    "TBIL-DSA" :  138,
+    "ALB" :	140,
+    "TP"	   : 141,
+    "ALP"   :	309,
+    "LDH" : 236,
+    "UREA"  : 142,
+    "CREA-S" : 240,
+    "TG" :	145,
+    "UA" :	245,
+    "GLU-G" :	144,
+    "TC"    :	146,
+    "A-AMY" :	188,
+    "GLU-O" :	144,
+    "CREA-J" : 239,
+    "P" : 242,
+    "CK" : 244,
+    "A-HBDH" : 287,
+    "CA" : 241,
+    "MG" : 243,
+    "TBIL-VOX" : 292,
+    "DBIL-VOX" : 293,
+    "GLU-HK" : 195,
+    "HDL-C"  : 237,
+    "LDL-C"  : 238,
+    "CRP"   :120
 }
 
