--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,6 @@
 {
-	"lisPath": "http://127.0.0.1:3000/api/update_result.php?specimen_id=#{SPECIMEN_ID}&measure_id=#{MEASURE_ID}&result=#{RESULT}&dec=0",
-	"lisUser": "iblisuser",
-	"lisPassword": "password",
-	"instrumentJSONMapping": "mapping.json",
-	"hostPort": "3018"
+	"iblsBaseURL": "http://127.0.0.1:3000/api/update_result.php",
+	"iblisUsername": "iblisuser",
+	"iblisPassword": "password",
+	"bs430ServicePort": "3020"
 }
