--- a/config/mapping.json
+++ b/config/mapping.json
@@ -9,12 +9,13 @@
     "ALP"   :	309,
     "LDH" : 236,
     "UREA"  : 142,
-    "CREA-S" : 240,
+    "CREA-S" : 143,
     "TG" :	145,
     "UA" :	245,
     "GLU-G" :	144,
     "TC"    :	146,
-    "A-AMY" :	188,
+    "A-AMY" :	229,
+    "Lipase" :  230,
     "GLU-O" :	144,
     "CREA-J" : 239,
     "P" : 242,
